# operation-subjects

./: LICENSE  README.md  environment.yml  main.py  pyproject.toml
app/: tui.py  visualizer.py
app/tools/: __init__.py  blast.py  fastp.py  fastqc.py  meme.py  msa.py  phylogeny.py  prodigal.py
operation_subjects.egg-info/: PKG-INFO  SOURCES.txt
